all existing files

--- a/Session 3/HomeWork.html
+++ b/Session 3/HomeWork.html
@@ -7,11 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="styleHomeWork.css">
 	</head>
 	<body>
-	<div id="containers">
-		<div id="header"> WEBSITE LOGO </div> 
-		<div id="menu"> MENU </div>
-		<div id="content"> CONTENT AREA </div>
-		<div id="footer"> FOOTER </div>
-	</div>
+		<header > WEBSITE LOGO </header>
+		<section >MENU </section>
+		<nav>   CONTENT AREA </nav>
+		<footer> footer</footer>
 	</body>
 </html>
