all existing file

--- a/session 6/homeWork1.html
+++ b/session 6/homeWork1.html
@@ -18,11 +18,11 @@
 		<section id="slider"> Slider </section>
 	</div>
 	<div id="main">
-		<section>
+		<header>
 			<div class="new1"> News 1 </div>
 			<div class="new2"> News 2</div>
 			<div class="new3"> News 3</div>
-		</section>
+		</header>
 		<nav>
 			<div class="ads1"> Ads1</div>
 			<div class="ads2"> Ads2</div>
@@ -32,9 +32,9 @@
 		</section>
 	</div>
 	<div class="footer">
-		<section>
+		<nav>
 			<div class="footer1"> Footer 1</div>
 			<div class="footer2"> Footer 2</div>
-		</section>
+		</nav>
 </body>
 </html>
