all existing files

--- a/session 6/homeWork1.html
+++ b/session 6/homeWork1.html
@@ -27,9 +27,9 @@
 			<div class="ads1"> Ads1</div>
 			<div class="ads2"> Ads2</div>
 		</nav>
-		<section>
+		<nav>
 			<div id="content"> Content</div>
-		</section>
+		</nav>
 	</div>
 	<div class="footer">
 		<nav>
