all existing files

--- a/session 6/homeWork1.html
+++ b/session 6/homeWork1.html
@@ -27,9 +27,9 @@
 			<div class="ads1"> Ads1</div>
 			<div class="ads2"> Ads2</div>
 		</nav>
-		<nav>
+		<section>
 			<div id="content"> Content</div>
-		</nav>
+		</section>
 	</div>
 	<div class="footer">
 		<nav>
