all existing files

--- a/session 6/homeWork2.html
+++ b/session 6/homeWork2.html
@@ -11,39 +11,36 @@
 </head>
 <body>
 	<ol>
-		<b><li class="box">Header</b>
-			<p></p>
-			<ol>
-				<li class="brand">Brand</li>
-				<li class="global">Global now</li>
-				<li class="tools">Tools</li>
-			</ol>
+		<li class="box"><b>Header</b>
+		<p></p>
+		<ol>
+			<li class="brand">Brand</li>
+			<li class="global">Global now</li>
+			<li class="tools">Tools</li>
+		</ol>
 		</li>
-		<b><li class="box1">Hero</b>
-			<ol>
-				<li class="heroFeture">Hero Feature</li>
-				<li class="heroColl">Hero coll to Action</li>
-			</ol>
+		<li class="box1"><b>Hero</b>
+		<ol>
+			<li class="heroFeture">Hero Feature</li>
+			<li class="heroColl">Hero coll to Action</li>
+		</ol>
 		</li>
-		<b><li class="box2">Ad</b>
-		<b><li class="box3">Body</b>
-			<ol>
-				<li class="articleFeature">Article Feature</li>
-				<li class="articalListing">Article Listing</li>
-			</ol>
+		<div id="main">
+			<li class="box2"><b>Ad</b></li>
+			<li class="box3"><b>Body</b>
+				<ol>
+					<li class="articleFeature">Article Feature</li>
+					<li class="articalListing">Article Listing</li>
+				</ol>
+			</li>
+		</div>
+		<li class="box4"><b>Sidebar</b>
+		<ol>
+			<li class="sidebar">Sidebar Feature</li>
+		</ol>
 		</li>
-		<b><li class="box4">Sidebar</b>
-			<ol>
-				<li class="sidebar">Sidebar Feature</li>
-			</ol>
-		</li>
-		<b><li class="box5">Footer</b>
+		<li class="box5"><b>Footer</b>
 		</li>
 	</ol>
-
-
-
-
-	</div>
 </body>
 </html>
