--- a/session 6/homeWork2.html
+++ b/session 6/homeWork2.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="homeWork2.css">
 </head>
 <body>
+	<div class="background" style="background-image: url(back.jpg);"></div>
 	<ol>
 		<li class="box"><b>Header</b>
 		<p></p>
