all existing files

--- a/session 8/homeWork1.html
+++ b/session 8/homeWork1.html
@@ -17,7 +17,7 @@
 		<ul class="sub-menu">
 			<li><a href="#Webdesign" class="box">Web Design</a></li>
 			<li><a href="#Webdevelopment" class="box">Web Development</a></li>
-			<li><a href="#Illustration" class="box">Illustration</a></li>
+			<li><a href="#Illustration" class="box">Illustrations</a></li>
 		</ul>
 	</li>
 	<li><a href="#Blog" class="active">Blog</a></li>
