--- a/session 7/menu.html
+++ b/session 7/menu.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+	<title>Menu - Session 8</title>
+	<link rel="shortcut icon" href="icon.ico">
 	<meta charset="utf-8">
-	<title> Example2 session 7 </title>
-	<meta name="description" content="session6">
-	<meta name="keywords" content="Example">
-	<link rel="shortcut icon" type="text/css" href="team.png">
+	<meta name="description" content="Example 1 session `8">
+	<meta name="keywords" content="PHP, HTML">
 	<link rel="stylesheet" type="text/css" href="menu.css">
 </head>
 <body>
-	<p>html</p>
-	<ol>
-		<li><a href="" > vanessa</a></li>
-		<li><a href="" > vanessa</a></li>
-		<li><a href="" > vanessa</a></li>
-		<li><a href="" > vanessa</a></li>
-		<li><a href="" > vanessa</a></li>
-		<li><a href="" > vanessa</a></li>
-	</ol>
+	<nav>
+		<ul>
+			<li class="active1"><a href="#">HTML5</a></li>
+			<li class="active1"><a href="#">CSS3</a></li>
+			<li class="active1"><a href="#">Javascript</a></li>
+			<li class="active1"><a href="#">Jquery</a></li>
+			<li class="active1"><a href="#">Bootstrap</a></li>
+		</ul>
+	</nav>
 </body>
 </html>
