--- a/session 8/homeWork3.html
+++ b/session 8/homeWork3.html
@@ -13,9 +13,10 @@
 		<header>
 			<div class="image"></div>
 				<ul class="headers">
-					<li class="item1">TRAN NGOC MINH</li>
-					<li class="item2">MINH.NGOC@GMAIL.COM</li>
-					<li class="item3">123 TRAN HUNG DAO</li>
+					<li class="item1"> TRAN NGOC MINH</li>
+					<li class="item2"><img src="mail.png" width="15px">    MINH.NGOC@GMAIL.COM</li>
+					<li class="item3"><img src="phone1.png" width="15px">  PHONE: 012 3456 7890</li>
+					<li class="item4"><img src="address.png" width="20px"> 123 TRAN HUNG DAO</li>
 				</ul>
 		</header>
 		<nav class="career"> CAREER SUMMARY </nav>
@@ -34,20 +35,20 @@
 				<li>Creativity| Commitment| Learning Agility| Goal Driven| Adaptable</li>
 			</ul>
 		</nav>
-		<section class="experience"> PROFESSIONAL EXPERIENCE: </section>
+		<nav class="experience"> PROFESSIONAL EXPERIENCE: </nav>
 		<nav class="experienceContent">
 			<ul class="First">
 				<li>Director of marketing</li>
 				<li>CAR inc. Boston MA</li>
 				<li>9.2006- Present</li>
 			</ul>
-			<p><b>Networking: </b></p>
 				<ul class="Networking">
+					<p><b>Networking: </b></p>
 					<li>Performed frequent and effective networking with a variety of business partners and customers.</li>
 					<li>Built strong, lasting relationships with market players</li>
 				</ul>
-			<p><b>Campain Leadership: </b></p>
 			<ul class="Leadership">
+				<p><b>Campain Leadership: </b></p>
 				<li>Organized road shows, trade shows and marketing events</li>
 				<li>Discovered and developed opportunities for marketing that involved advertising on the internet,regional/national as well
 				as specialist publications</li>
@@ -58,8 +59,8 @@
 				<li>MOTOR inc. -District1.Ho Chi Minh City</li>
 				<li>2.2002-8.2006</li>
 			</ul>
-			<p><b>Research & Analysis: </b></p>
 			<ul class="Research">
+				<p><b>Research & Analysis: </b></p>
 				<li>Organized marketing research to implement brand awareness.</li>
 				<li>Conduct customer surveys to analyze the demands of the market.</li>
 				<li>Analyze product and market pricings on a regular basis</li>
