all existing files

--- a/session 8/homeWork3.html
+++ b/session 8/homeWork3.html
@@ -14,9 +14,9 @@
 			<div class="image"></div>
 				<ul class="headers">
 					<li class="item1"> TRAN NGOC MINH</li>
-					<li class="item2"><img src="mail.png" width="15px">    MINH.NGOC@GMAIL.COM</li>
-					<li class="item3"><img src="phone1.png" width="15px">  PHONE: 012 3456 7890</li>
-					<li class="item4"><img src="address.png" width="20px"> 123 TRAN HUNG DAO</li>
+					<li class="item2"><img src="mail.png" alt="logo" width="15px">    MINH.NGOC@GMAIL.COM</li>
+					<li class="item3"><img src="phone1.png" alt="logo" width="15px">  PHONE: 012 3456 7890</li>
+					<li class="item4"><img src="address.png" alt="logo" width="20px"> 123 TRAN HUNG DAO</li>
 				</ul>
 		</header>
 		<nav class="career"> CAREER SUMMARY </nav>
