all existing files

--- a/session 8/homeWork3.html
+++ b/session 8/homeWork3.html
@@ -43,12 +43,12 @@
 				<li>9.2006- Present</li>
 			</ul>
 				<ul class="Networking">
-					<p><b>Networking: </b></p>
+					<p class="demo"><b>Networking: </b></p>
 					<li>Performed frequent and effective networking with a variety of business partners and customers.</li>
 					<li>Built strong, lasting relationships with market players</li>
 				</ul>
 			<ul class="Leadership">
-				<p><b>Campain Leadership: </b></p>
+				<p class="demo"><b>Campain Leadership: </b></p>
 				<li>Organized road shows, trade shows and marketing events</li>
 				<li>Discovered and developed opportunities for marketing that involved advertising on the internet,regional/national as well
 				as specialist publications</li>
@@ -60,7 +60,7 @@
 				<li>2.2002-8.2006</li>
 			</ul>
 			<ul class="Research">
-				<p><b>Research & Analysis: </b></p>
+				<p class="demo"><b>Research & Analysis: </b></p>
 				<li>Organized marketing research to implement brand awareness.</li>
 				<li>Conduct customer surveys to analyze the demands of the market.</li>
 				<li>Analyze product and market pricings on a regular basis</li>
