all existing files

--- a/session 9/homeWork/homeWork.html
+++ b/session 9/homeWork/homeWork.html
@@ -13,12 +13,32 @@
 	<div class="Duytan">
 	<header>
 		<ul class="menu1">
-			<li><a href="#vietnam"><img class="vietnam" src="../image/coVN.png"></a></li>
-			<li><a href="#US"><img class="US" src="../image/US.jpg"></a></li>
-			<li><a href="#phone"><img class="phone" src="../image/phone.png"> </a><p class="text">1234566</p></li>
-			<li><a href="#mail"><img class="mail" src="../image/mail.png"></a><p class="text">CONTACT</p></li>
-			<li><a href="#eUni"><img class="eUni" src="../image/eUniversity.png"></a><p class="text1">eUniversity</p></li>
-			<li><a href="#myDTU"><img class="myDTU" src="../image/myDTU.jpg"></a><p class="text1">myDTU</p></li>
+			<li><a href="#vietnam"><img class="vietnam" src="../image/coVN.png" alt="coVN"></a></li>
+			<li><a href="#US"><img class="US" src="../image/US.jpg" alt="US"></a></li>
+			<li><img class="phone" src="../image/phone.png" alt="phone" ><a class="phone1" href="#phone">123456</a></li>
+			<li><img class="mail" src="../image/mail.png" alt="mail"><a class="phone1" href="#mail">CONTACT</a>
+				<div class="about0">
+					<header class="head">CONTACT</header>
+					<p class="sub-text1">
+						DUY TAN UNIVERSITY
+						<ul>
+							<li>
+								<a href="#address"><img src="../image/address.png" alt="address" width="15px"> <b>Address: </b></a>254 Nguyễn Văn Linh, Quận Thanh Khê - Tp. Đà Nẵng
+							</li>
+							<li>
+								<a href="#phone"><img src="../image/phone.png" alt="phone" width="15px"> <b>phone: </b></a> (+84) 236.3650403 - (+84) 236.3827111
+							</li>
+						</ul>
+						
+					</p>
+				</div>
+
+
+
+
+			</li>
+			<li><a href="#eUni"><img class="eUni" src="../image/eUniversity.png" alt="eUni"></a><p class="text1">eUniversity</p></li>
+			<li><a href="#myDTU"><img class="myDTU" src="../image/myDTU.jpg" alt="myDTU"></a><p class="text1">myDTU</p></li>
 			<li>
 				<form>
 					<input class="Find" type="text" name="TimKiem" value="TimKiem">
@@ -29,8 +49,8 @@
 	</header>
 	<section>
 		<ul class="menu2">
-			<li><img class="logo" src="../image/duytan.png"></li>
-			<li><a href="#home" class="active"><img class="home" src="../image/home.jpg"></a></li>
+			<li><img class="logo" src="../image/duytan.png" alt="logo"></li>
+			<li><a href="#home" class="active"><img class="home" src="../image/home.jpg" alt="home"></a></li>
 			<li><a href="#about" class="active">ABOUT</a>
 				<div class="about1" >
 					<ul class="list1">
@@ -38,79 +58,75 @@
 						<li><a href="#" class="active2">Mission</a></li> 
 						<li><a href="#" class="active2">Traditions</a></li> 
 						<li><a href="#" class="active2">Our Campuses</a></li> 
-						<li><a href="#"class="active2">Key Dates</a></li>
+						<li><a href="#" class="active2">Key Dates</a></li>
 						<li><a href="#" class="active2">Programs</a></li>
 						<li><a href="#" class="active2">Degree</a></li>
 						<li><a href="#" class="active2">Study </a></li>
 						<li><a href="#" class="active2">DTU Facilities</a></li>
-						<li><a href="#"class="active2">Research</a></li>
-						<li><a href="#"class="active2">Scholarships</a></li>
-						<li><a href="#"class="active2">Faculty</a></li>
-						<li><a href="#"class="active2">Administration </a></li>
+						<li><a href="#" class="active2">Research</a></li>
+						<li><a href="#" class="active2">Scholarships</a></li>
+						<li><a href="#" class="active2">Faculty</a></li>
+						<li><a href="#" class="active2">Administration </a></li>
 						<li><a href="#" class="active2">Workplaces</a></li>
-						<li><a href="#"class="active2">Awards</a></li>
-						<li><a href="#"class="active2">Contribution</a></li>
+						<li><a href="#" class="active2">Awards</a></li>
+						<li><a href="#" class="active2">Contribution</a></li>
 					</ul>
 				</div>
 				<p class="sub-text" >
 					Duy Tan University is located in the heart of sunny Danang, on the Pacific Ocean. The university has steadily developed, sharing its ambition with the city to create a bustling, modern, international metropolis. Founded by the decree of the Prime Minister of Vietnam on the November 11th, 1994, Duy Tan University is the first and the largest private, multidisciplinary and diversified institution in Central Vietnam.
- 					<br></br>
+ 					<br/>
 					For nearly 25 years, thanks to its great efforts, DTU has made steady progress in education and training. The University has enrolled 2,600 students in 5 Postgraduate and 16 Graduate courses, 70,000 in 23 Undergraduate & Associate Bachelor’s Degree programs and 1,400 students in Vocational programs. 
-					<br></br>
-					<img class="truong" src="../image/truong.jpg">
-					<br></br>
+					<br/>
+					<img class="truong" src="../image/truong.jpg" alt="truong">
+					<br/>
 					Duy Tan University offers a wide range of academic programs, including Information Technology, Business Management, Foreign Languages, Tourism, Electrical Engineering, Civil Engineering, Architecture, Medicine, Pharmacology, Literature and Journalism, International Relations, Cultural Tourism and Economic Law. Through its 16 graduate courses, DTU has fueled the local labor market with a total of 45,000 graduates and post-graduates so far. Over 89% of graduates find jobs within six months of graduation. This rate is even higher, at 100%, for DTU Software Technology graduates.
- 					<br></br>
+ 					<br/>
 					In addition, with the slogan: "Partnering with Giants”, Duy Tan University has expanded partnerships with many well-known universities around the world. These include Carnegie Mellon University (CMU), one of the top four American universities in IT; Pennsylvania State University (PSU), one of the top fifty universities in Business Management and Hospitality and Tourism; and California State University, CSU Fullerton and Cal Poly, one of the top five American public universities in Civil Engineering and Architecture on the West Coast. 
-					<br></br>
+					<br/>
 					By providing access to internationally standardized curricula, DTU has established programs to help students continue their studies abroad. More choices are now available for DTU students, such as the 2+2 program (2 years at DTU and 2 years in America), the 1+1+2 program (1 year at DTU and 3 years in America) and the 3+1 program (3 years at DTU and the final one either in Singapore or England). In 2017, DTU partnered with Troy University and Keuka College in the USA to offer students On-Site Study-Abroad programs in four disciplines: Business Administration, IT, Hotel Management and Financial Management. Students can now receive advanced education and graduate with internationally accredited degrees, without having to leave Vietnam. This is one of the key strategies to enhance the quality of education at DTU to adapt to rapidly evolving social requirements.
-					<br></br>
- 
+					<br/>
 					Since its inception in 1994, the quality and quantity of the DTU faculty has steadily increased. Many DTU lecturers graduated from leading universities in the USA, Russia, France, Germany, Canada, Korea and Belgium.
-					 <br></br>
- 
+					<br/>
 					Over the course of almost 23 years of operation and development, DTU students have achieved special academic accomplishments in their quest for knowledge and skill. 
-					<br></br>
- 
+					<br/>
 					1. The 2013, 2016, and 2017 CDIO Cups
-					<br></br>
+					<br/>
 					2. The Asia - Pacific IDEERS Championship in 2014.
-					<br></br>
- 
+					<br/>
 					3. First prizes in the 2016 and 2017 National Microsoft Imagine Cup.
-					<br></br> 
+					<br/>
 					4. A win in the 2016 and 2017 National Go- Green- In - The - City.
-					<br></br>
+					<br/>
 					5. Fourth place in the 2016 International Information Security Competition, held in Switzerland.
-					<br></br>
+					<br/>
 					6. Dang Xuan Nam came first in the Loa Thanh Civil Engineering and Architecture Tournament in 2010.
-					<br></br>
+					<br/>
 					7. Eight first prizes, seven second, fourteen third and seven consolation prizes in the National Student Festival of Architecture. 
-					<br></br>
+					<br/>
 					8. Nguyen Thu Quynh won a National award for Female Information Technology students in 2012.
-					<br></br>
+					<br/>
 					9. The “January Star” Awards organized by the Vietnamese Student Association.
-					<br></br>
+					<br/>
 					10. Ta Ba Thanh Huy won first prize in the 2008 National Informatics College Olympiads.
-					<br></br>
+					<br/>
 					11. Many other awards in the National Mathematics, Informatics and Physics College Olympiads.
-					<br></br>
+					<br/>
 					12. A Third prize and the Style Award in the 2014 Vietnam Robot Contest.
-					<br></br>
+					<br/>
 					13. Big prizes in the 2014, 2016 and 2017 Computer Fireworks Competitions.
-					 <br></br>
+					<br/>
 					Over twenty-three years of development and devotion, DTU has always been worthy of the trust and confidence of the Communist Party, the State and our community and has received many certificates of merit and medals from the City and National government.
-					 <br></br>
+					<br/>
 					Government recognition awards have motivated DTU faculty and staff to continue making increasing contributions to the national education and countless things have been done. Many anticipated and unexpected achievements have been accomplished. The early ambitions of its founders combined with the dedication and hard work of all now guarantee a bright future for DTU.
-					 <br></br>
+					<br/>
 					For its significant achievements in education and research, DTU received a Certificate of National Educational Quality from the Center for Educational Accreditation of the Association of Vietnamese Universities and Colleges on February 20th. The University has set itself the goal of gaining international ABET accreditation, along with other international accreditations and of joining the list of the top 300 Asian Universities.
-					 <br></br>
+					<br/>
 					In keeping the motto: “We Do Everything for Student Rights and Future Careers”, together with the mission: "To focus on the education and research of various sciences and technologies in order to produce dynamic, creative, healthy graduates, who love their country, possess humanitarian Vietnamese values, a sense of community, self-confidence and a broad range of capabilities and skills, to become Citizens of the World", Hero of Labor, Distinguished Teacher Le Cong Co, DTU President and Provost, has inspired everyone at DTU to work harder for the development of DTU in the near future.
+					<br/>
 				</p>
 				<div class="about2" >
 					<ul class="list2">
 						<li><a href="#" class="active3">Firgure: </a></li>
-						<br></br> 
 						<li><a href="#" class="active4">year of founding:1994</a></li> 
 						<li><a href="#" class="active4">EDUCATION</a>
 							<ul>
@@ -127,7 +143,7 @@
 								</li>
 							</ul>
 						</li> 
-						<li><a href="#"class="active4">EMPLOYEES</a>
+						<li><a href="#" class="active4">EMPLOYEES</a>
 							<ul>
 								<li>90% of DTU students are employed within six months of graduation.</li>
 
@@ -145,6 +161,8 @@
 						<p class="sub-text">
 							After its successes in educating students for Bachelor degrees, DTU has successfully continued to develop Master’s and PhD programs. To date, DTU has established Master’s programs in Business Administration, Accounting, Computer Science, Construction, and Finance and Banking and PhD programs in Computer Science, Business Administration, and Accounting. DTU is the first private university to be authorized to award PhD degrees.
 						</p>
+						<img class="graduation" src="../image/gra.jpg" alt="graduation">
+						<img class="graduation" src="../image/gra1.jpg" alt="graduation1">
 					</li>
 					<li><a href="#undergraduate" class="box">UnderGraduate</a>
 						<p class="sub-text">
@@ -163,14 +181,14 @@
 		</ul>
 	</section>
 	<content>
-		<img class="achievement" src="../image/chithanh.jpg">
+		<img class="achievement" src="../image/chithanh.jpg" alt="chithanh">
 		<br></br>
 		<nav>
-		<img class="achievement1" src="../image/tuyensinh.png">
+		<img class="achievement1" src="../image/tuyensinh.png" alt="tuyensinh">
 		<br></br>
-		<img class="achievement2" src="../image/chiminh.jpg">
+		<img class="achievement2" src="../image/chiminh.jpg" alt="chiminh">
 		</nav>
-		<img class="achievement" src="../image/truong1.jpg">
+		<img class="achievement" src="../image/truong1.jpg" alt="truong1">
 
 	</content>
 	<footer>
