--- a/session 9/Html/contact.html
+++ b/session 9/Html/contact.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>HomeWork-session9</title>
-	<meta name="description" content="HomeWork-session9">
+	<title>Contact-session9</title>
+	<meta name="description" content="contact-session9">
 	<meta name="keywords" content="HomeWork">
 	<link rel="shortcut icon" type="text/css" href="../image/logoDuyTan.jpg">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-	<link rel="stylesheet" type="text/css" href="../homeWork/homeWork.css">
+	<link rel="stylesheet" type="text/css" href="../Css/contact.css">
 </head>
 <body>
 	<div class="Duytan">
@@ -15,7 +15,7 @@
 		<ul class="menu1">
 			<li><a href="#vietnam"><img class="vietnam" src="../image/coVN.png" alt="coVN"></a></li>
 			<li><a href="#US"><img class="US" src="../image/US.jpg" alt="US"></a></li>
-			<li><img class="phone" src="../image/phone.png" alt="phone" ><a class="phone1" href="#phone">(+84) 236.3871</a></li>
+			<li><img class="phone" src="../image/phone.png" alt="phone" ><a class="phone1" href="#phone">123456</a></li>
 			<li><img class="mail" src="../image/mail.png" alt="mail"><a class="phone1" href="file:///D:/19PHP01/session%209/Html/contact.html" target="_blank">CONTACT</a></li>
 			<li><img class="eUni" src="../image/eUniversity.png" alt="eUni"><p class="text1"><a href="http://euniversity.edu.vn/" target="_blank">eUniversity</a></p></li>
 			<li><img class="myDTU" src="../image/myDTU.jpg" alt="myDTU"><p class="text1"><a href="https://mydtu.duytan.edu.vn/Sites/index.aspx?p=home_timetable&functionid=13" target="_blank">myDTU</a> </p></li>
@@ -141,6 +141,7 @@
 						<p class="sub-text">
 							After its successes in educating students for Bachelor degrees, DTU has successfully continued to develop Master’s and PhD programs. To date, DTU has established Master’s programs in Business Administration, Accounting, Computer Science, Construction, and Finance and Banking and PhD programs in Computer Science, Business Administration, and Accounting. DTU is the first private university to be authorized to award PhD degrees.
 						</p>
+						<img class="graduation" src="../image/gra.jpg" alt="graduation">
 						<img class="graduation" src="../image/gra1.jpg" alt="graduation1">
 					</li>
 					<li><a href="#undergraduate" class="box">UnderGraduate</a>
@@ -159,78 +160,3 @@
 			<li><a href="#new" class="active">NEWS</a></li>
 		</ul>
 	</section>
-	<content>
-		<img class="achievement" src="../image/chithanh.jpg" alt="chithanh">
-		<br></br>
-		<nav>
-		<img class="achievement1" src="../image/tuyensinh.png" alt="tuyensinh">
-		<br></br>
-		<img class="achievement2" src="../image/chiminh.jpg" alt="chiminh">
-		</nav>
-		<img class="achievement" src="../image/truong1.jpg" alt="truong1">
-
-	</content>
-	<nav>
-		<div id="blockquote">
-		<img class="duytan" src="../image/logo.png" alt="logo">
-		<p class="Sitemap">A-Z Sitemap</p>
-		<p class="a-z"># A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p></div>
-		<div id="blockquote">
-			<br/>
-			<br/>
-			<br/>
-			<br/>
-			<br/>
-			<q><i>Duy Tan University’s mission is to focus on the education and research of various sciences and technologies in order to produce dynamic, creative, healthy graduates, who love their country, possess humanitarian Vietnamese values, a sense of community, self-confidence and a broad range of capabilities and skills, to become Citizens of the World.</i></q>
-		</div>
-	</nav>
-	<footer>
-		<div class="help">
-			<ul class="text-help">
-				<p>HELP</p>
-				<li>Site Map</li>
-				<li>Contact</li>
-			</ul>
-		</div>
-		<div class="help1">
-			<ul class="web">
-				<p>WEB LINKS</p>
-				<li>DTU Board of Trustees and Provosts</li>
-				<br/>
-				<li>Departments</li>
-				<br/>
-				<li>Center</li>
-			</ul>
-		</div>
-		<div class="help1">
-			<ul class="educa">
-				<li>Education and Training</li>
-				<br/>
-				<li>Affiliations</li>
-				<br/>
-				<li>Unions</li>
-				<br/>
-			</ul>
-			
-		</div>
-		<div class="help">
-			<ul class="liba">
-			<li>Libraries</li>
-			<br/>
- 			<li>A tour of DTU</li>
- 		</ul>
-	</div>
-	<div class="copy">
-		<p>
-		Copyright &copy 2019 - DuyTan University
-		<br/>
-		Address: 254 Nguyen Van Linh, Danang, Vietnam
-		<br/>
-		Tel: (+84) 236.3650403 - (+84) 236.3827111
-	</p>
-	</div>
-
-	</footer>
-</div>
-</body>
-</html>
