all existing files

--- a/session 9/Html/contact.html
+++ b/session 9/Html/contact.html
@@ -160,3 +160,99 @@
 			<li><a href="#new" class="active">NEWS</a></li>
 		</ul>
 	</section>
+	<content>
+		<h2 class="conta"> CONTACT </h2>
+		<div class="daihocduytan">
+			<img class="imageTruong" src="../image/truong.jpg" alt="truong" width="100px">
+			<p class="DUYTANuniversity">Duy Tan University</p>
+			<ul class="diachi">
+			<li><b>Address</b> 254 Nguyen Van Linh, Danang, Vietnam</li>
+			<li><b>Tel:</b> (+84) 236.3650403 - (+84) 236.3827111<li>
+			<li><b>Fax:</b> (+84).236.3.650443</li>
+			<li><b>Website:</b> http://duytan.edu.vn</li>
+			<li><b>Enrollment:</b> http://tuyensinh.duytan.edu.vn</li>
+			<li><b>Enrollment Information:</b> http://nhungdieucanbiet.edu.vn</li>
+			</ul>
+			<img class="imageTruong" src="../image/office.jpg" alt="imageTruong" width="100px">
+			<p class="DUYTANuniversity">DTU Office</p>
+			<ul class="diachi">
+				<li><b>Address:</b> 03 Quang Trung, Hai Chau District, Danang</li>
+				<li><b>Tel:</b> 0236.3.827111</li>
+				<li><b>Fax:</b> 0236.3.650443</li>
+				<li><b>Website: </b> http://vanphong.duytan.edu.vn</li>
+			</ul>
+			<img class="imageTruong" src="../image/admission.jpg" alt="imageTruong" width="100px">
+			<p class="DUYTANuniversity">DTU Admission Center</p>
+			<ul class="diachi">
+				<li><b>Address: </b> 254 Nguyen Van Linh, Thanh Khe District, Danang</li>
+				<li><b>Hotline:</b> 0905.294.390 - 0905.294.391 - 1900.966.900</li>
+				<li><b>Tel:</b> 0236.3.650403 - 0236.3.653561</li>
+				<li><b>Website:</b> http://tuyensinh.duytan.edu.vn</li>
+			</ul>
+		</div>
+		<div class="map">
+			<img src="../image/map.jpg" alt="map" width="100%">
+		</div>
+	</content>
+	<nav>
+			<div id="blockquote">
+		<img class="duytan" src="../image/logo.png" alt="logo">
+		<p class="Sitemap">A-Z Sitemap</p>
+		<p class="a-z"># A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p></div>
+		<div id="blockquote">
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<q><i>Duy Tan University’s mission is to focus on the education and research of various sciences and technologies in order to produce dynamic, creative, healthy graduates, who love their country, possess humanitarian Vietnamese values, a sense of community, self-confidence and a broad range of capabilities and skills, to become Citizens of the World.</i></q>
+		</div>
+		
+	</nav>
+	<footer>
+		<div class="help">
+			<ul class="text-help">
+				<p>HELP</p>
+				<li>Site Map</li>
+				<li>Contact</li>
+			</ul>
+		</div>
+		<div class="help1">
+			<ul class="web">
+				<p>WEB LINKS</p>
+				<li>DTU Board of Trustees and Provosts</li>
+				<br/>
+				<li>Departments</li>
+				<br/>
+				<li>Center</li>
+			</ul>
+		</div>
+		<div class="help1">
+			<ul class="educa">
+				<li>Education and Training</li>
+				<br/>
+				<li>Affiliations</li>
+				<br/>
+				<li>Unions</li>
+				<br/>
+			</ul>
+			
+		</div>
+		<div class="help">
+			<ul class="liba">
+			<li>Libraries</li>
+			<br/>
+ 			<li>A tour of DTU</li>
+ 		</ul>
+	</div>
+	<div class="copy">
+		<p>
+		Copyright &copy 2019 - DuyTan University
+		<br/>
+		Address: 254 Nguyen Van Linh, Danang, Vietnam
+		<br/>
+		Tel: (+84) 236.3650403 - (+84) 236.3827111
+	</p>
+	</div>
+
+	</footer>
