all existing files

--- a/session 9/Html/new.html
+++ b/session 9/Html/new.html
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>HomeWork-session9</title>
-	<meta name="description" content="HomeWork-session9">
+	<title>new-session9</title>
+	<meta name="description" content="new-session9">
 	<meta name="keywords" content="HomeWork">
 	<link rel="shortcut icon" type="text/css" href="../image/logoDuyTan.jpg">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-	<link rel="stylesheet" type="text/css" href="../homeWork/homeWork.css">
+	<link rel="stylesheet" type="text/css" href="../Css/new.css">
 </head>
 <body>
-	<div class="Duytan">
-	<header>
-		<ul class="menu1">
+<header>
+	<ul class="menu1">
 			<li><a href="#vietnam"><img class="vietnam" src="../image/coVN.png" alt="coVN"></a></li>
 			<li><a href="#US"><img class="US" src="../image/US.jpg" alt="US"></a></li>
-			<li><img class="phone" src="../image/phone.png" alt="phone" ><a class="phone1" href="#phone">(+84) 236.3871</a></li>
+			<li><img class="phone" src="../image/phone.png" alt="phone" ><a class="phone1" href="#phone">123456</a></li>
 			<li><img class="mail" src="../image/mail.png" alt="mail"><a class="phone1" href="file:///D:/19PHP01/session%209/Html/contact.html" target="_blank">CONTACT</a></li>
 			<li><img class="eUni" src="../image/eUniversity.png" alt="eUni"><p class="text1"><a href="http://euniversity.edu.vn/" target="_blank">eUniversity</a></p></li>
 			<li><img class="myDTU" src="../image/myDTU.jpg" alt="myDTU"><p class="text1"><a href="https://mydtu.duytan.edu.vn/Sites/index.aspx?p=home_timetable&functionid=13" target="_blank">myDTU</a> </p></li>
@@ -26,8 +25,8 @@
 				</form>
 			</li>
 		</ul>
-	</header>
-	<section>
+</header>
+<section>
 		<ul class="menu2">
 			<li><img class="logo" src="../image/duytan.png" alt="logo"></li>
 			<li><a href="#home" class="active"><img class="home" src="../image/home.jpg" alt="home"></a></li>
@@ -141,6 +140,7 @@
 						<p class="sub-text">
 							After its successes in educating students for Bachelor degrees, DTU has successfully continued to develop Master’s and PhD programs. To date, DTU has established Master’s programs in Business Administration, Accounting, Computer Science, Construction, and Finance and Banking and PhD programs in Computer Science, Business Administration, and Accounting. DTU is the first private university to be authorized to award PhD degrees.
 						</p>
+						<img class="graduation" src="../image/gra.jpg" alt="graduation">
 						<img class="graduation" src="../image/gra1.jpg" alt="graduation1">
 					</li>
 					<li><a href="#undergraduate" class="box">UnderGraduate</a>
@@ -156,22 +156,29 @@
 			<li><a href="#COLLABORATION" class="active">COLLABORATION</a></li>
 			<li><a href="#studyAbroad" class="active">STUDY ABROAD</a></li>
 			<li><a href="#sport" class="active">SPORT</a></li>
-			<li><a href="file:///D:/19PHP01/session%209/Html/new.html" target="_blank" class="active">NEWS</a></li>
+			<li><a href="#new" class="active">NEWS</a></li>
 		</ul>
 	</section>
-	<content>
-		<img class="achievement" src="../image/chithanh.jpg" alt="chithanh">
-		<br></br>
-		<nav>
-		<img class="achievement1" src="../image/tuyensinh.png" alt="tuyensinh">
-		<br></br>
-		<img class="achievement2" src="../image/chiminh.jpg" alt="chiminh">
-		</nav>
-		<img class="achievement" src="../image/truong1.jpg" alt="truong1">
+<content>
+	<div class="containDuytan">
+	<img class="duytan1" src="../image/logo.png" alt="duytan1" width="200px"> 
+	 <p class="duytannew"> DUY TAN </p><p class="chudo"> NEWS </p>
+	<form class="timkiem1">
+		<input class="find1" type="text" name="TimKiem...." value="timkiem....">
+		<input type="submit" value="English" >
+	</form>
+</div>
 
-	</content>
-	<nav>
-		<div id="blockquote">
+
+
+
+
+
+
+	
+</content>
+<nav>
+	<div id="blockquote">
 		<img class="duytan" src="../image/logo.png" alt="logo">
 		<p class="Sitemap">A-Z Sitemap</p>
 		<p class="a-z"># A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p></div>
@@ -184,6 +191,7 @@
 			<q><i>Duy Tan University’s mission is to focus on the education and research of various sciences and technologies in order to produce dynamic, creative, healthy graduates, who love their country, possess humanitarian Vietnamese values, a sense of community, self-confidence and a broad range of capabilities and skills, to become Citizens of the World.</i></q>
 		</div>
 	</nav>
+<footer>
 	<footer>
 		<div class="help">
 			<ul class="text-help">
@@ -229,8 +237,8 @@
 		Tel: (+84) 236.3650403 - (+84) 236.3827111
 	</p>
 	</div>
+	
+</footer>
 
-	</footer>
-</div>
 </body>
 </html>
