all existing files

--- a/session 9/Html/new.html
+++ b/session 9/Html/new.html
@@ -160,9 +160,9 @@
 		</ul>
 	</section>
 <content>
-	<div class="containDuytan">
-	<img class="duytan1" src="../image/logo.png" alt="duytan1" width="200px"> 
-	 <p class="duytannew"> DUY TAN </p><p class="chudo"> NEWS </p>
+<div class="containDuytan">
+	<img class="duytan1" src="../image/logo.png" alt="duytan1"> 
+	 <p class="duytannew"> DUY TAN  <p class="chudo"> NEWS</p>
 	<form class="timkiem1">
 		<input class="find1" type="text" name="TimKiem...." value="timkiem....">
 		<input type="submit" value="English" >
