all existing files

--- a/session 9/Html/new.html
+++ b/session 9/Html/new.html
@@ -168,7 +168,24 @@
 		<input type="submit" value="English" >
 	</form>
 </div>
+<div class="frame">
 
+</div>
+<div class="frame">
+	
+</div>
+<div class="frame">
+	
+</div>
+<div class="frame1">
+
+</div>
+<div class="frame1">
+	
+</div>
+<div class="frame1">
+	
+</div>
 
 
 
