all existing files

--- a/session 9/Html/new.html
+++ b/session 9/Html/new.html
@@ -156,7 +156,7 @@
 			<li><a href="#COLLABORATION" class="active">COLLABORATION</a></li>
 			<li><a href="#studyAbroad" class="active">STUDY ABROAD</a></li>
 			<li><a href="#sport" class="active">SPORT</a></li>
-			<li><a href="#new" class="active">NEWS</a></li>
+			<li><a href="file:///D:/19PHP01/session%209/Html/new.html" class="active">NEWS</a></li>
 		</ul>
 	</section>
 <content>
