all existing files

--- a/session 10/html/homeWork.html
+++ b/session 10/html/homeWork.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="HomeWork">
 	<link rel="shortcut icon" type="text/css" href="../image/logoDuyTan.jpg">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-	<link rel="stylesheet" type="text/css" href="../css/HomeWork.css">
+	<link rel="stylesheet" type="text/css" href="../css/homeWork.css">
 </head>
 <body>
 <header>
@@ -67,10 +67,59 @@
 	</div>
 </section>
 <footer>
-	<p class="border"><a class="language" href="#">Tiếng viêt</a> &nbsp   <a href="#">English(UK)</a>&nbsp<a href="#"> 中文(台灣)</a> &nbsp <a href="#">한국어</a> &nbsp <a href="#">日本語</a> &nbsp<a href="#">Français (France)</a> &nbsp<a href="#">ภาษาไทย</a> &nbsp <a href="#">Español</a> &nbsp<a href="#">Português (Brasil)</a> &nbsp<a href="#">Deutsch</a> &nbsp<a href="#">Italiano</a></p>
+	<!-- <p class="border"><a class="language" href="#">Tiếng viêt</a> &nbsp   <a href="#">English(UK)</a>&nbsp<a href="#"> 中文(台灣)</a> &nbsp <a href="#">한국어</a> &nbsp <a href="#">日本語</a> &nbsp<a href="#">Français (France)</a> &nbsp<a href="#">ภาษาไทย</a> &nbsp <a href="#">Español</a> &nbsp<a href="#">Português (Brasil)</a> &nbsp<a href="#">Deutsch</a> &nbsp<a href="#">Italiano</a></p>
 	<p class="border1">
 		<a href="#"> Đăng ký </a> &nbsp<a href="#">Đăng nhập</a> &nbsp<a href="#">Messenger</a> &nbsp<a href="#">Facebook Lite</a>&nbsp<a href="#">Tìm bạn bè</a>&nbsp<a href="#">Danh bạ</a> &nbsp<a href="#">Trang cá nhân</a>&nbsp<a href="#">Trang</a>&nbsp<a href="#">Hạng mục</a>&nbsp<a href="#">TrangĐịa điểm</a>&nbsp<a href="#">Trò chơi</a>&nbsp<a href="#">Vị trí</a>&nbsp<a href="#">Marketplace</a> &nbsp<a href="#">Nhóm</a>&nbsp<a href="#">Instagram</a>&nbsp<a href="#">Địa phương</a>&nbsp<a href="#"> Trang</a>&nbsp<a href="#">gây quỹ</a>&nbsp<a href="#">Giới thiệu</a>&nbsp<a href="#"> Tạo quảng cáo</a>&nbsp<a href="#">Tạo Trang</a>&nbsp<a href="#">Nhà phát triển</a>&nbsp<a href="#">Tuyển dụng</a>&nbsp<a href="#">Quyền riêng tư</a>&nbsp<a href="#">Cookie</a>&nbsp<a href="#"> Lựa chọn quảng cáo</a>&nbsp<a href="#">Điều khoản</a>&nbsp<a href="#">Bảo mật tài khoản</a>&nbsp<a href="#">Trợ giúp</a>&nbsp<a href="#">đăng nhập</a>&nbsp<a href="#"> Trợ giúp</a>&nbsp<a href="#">Cài đặt</a>&nbsp<a href="#">Nhật ký hoạt động</a>
-	</p>
+	</p> -->
+	<ul class="border">
+		<li><a href="#">Tiếng viêt </a></li>
+		<li><a href="#">English(UK)</a></li>  
+		<li><a href="#"> 中文(台灣) </a></li>
+		<li><a href="#">한국어   </a></li>
+		<li><a href="#"> 日本語  </a></li>
+		 <li><a href="#">Français(France)</a></li>  
+		<li><a href="#"> ภาษาไทย </a></li>  
+		 <li><a href="#">Español</a></li>  
+		 <li><a href="#">Português(Brasil)</a></li>
+		 <li><a href="#">Deutsch</a></li>
+		<li><a href="#"> Italiano</a></li>
+	</ul>
+	<ul class="border1">
+		<li><a href="#">Đăng ký</a> </li>
+		<li><a href="#">Đăng nhập</a></li>
+		<li><a href="#">Messenger</a></li>
+		<li><a href="#">Facebook Lite</a></li>
+		<li><a href="#">Tìm bạn bè</a></li>
+		<li><a href="#">Danh bạ</a></li>
+		<li><a href="#">Trang cá nhân</a></li>
+		<li><a href="#">Trang</a></li>
+		<li><a href="#">Hạng mục</a></li>
+		<li><a href="#">Trang</a></li>
+		<li><a href="#">Địa điểm</a></li>
+		<li><a href="#">Tròchơi</a></li>
+		<li><a href="#">Vị trí</a></li>
+		<li><a href="#">Marketplace</a></li>
+		<li><a href="#">Nhóm</a></li>
+		<li><a href="#">Instagram</a></li>
+		<li><a href="#">Địa phương</a></li>
+		<li><a href="#">Trang </a></li>
+		<li><a href="#">gây quỹ</a></li>
+		<li><a href="#">Giới thiệu</a></li>
+		<li><a href="#">Tạo quảng cáo</a></li>
+		<li><a href="#">Tạo Trang</a></li>
+		<li><a href="#">Nhà phát triển</a></li>
+		<li><a href="#">Tuyển dụng</a></li>
+		<li><a href="#">Quyền riêng tư</a></li>
+		<li><a href="#">Cookie</a></li>
+		<li><a href="#">Lựa chọn quảng cáo</a></li>
+		<li><a href="#">Điều khoản</a></li>
+		<li><a href="#">Bảo mật </a></li>
+		<li><a href="#">tài khoản</a></li>
+		<li><a href="#">Trợ giúp</a></li>
+		 <li><a href="#">đăng nhập</a></li>
+		<li><a href="#"> Trợ giúp</a></li>
+		<li><a href="#">Cài đặt</a></li>
+	</ul>
 
 </footer>
 </body>
