all existing files

--- a/session 11/html/learn2.html
+++ b/session 11/html/learn2.html
@@ -9,6 +9,11 @@
 	<link rel="stylesheet" type="text/css" href="../css/affect.css">
 </head>
 <body>
+	<form>
+		<input class="bcc" type="submit" name="botton" value="in bang cuu chuong">
+		document.getElementById('bbc').innerHTML="In bang cuu chuong";
+
+	</form>
 <script type="text/javascript" src="../js/learn1.js"></script>
 </body>
 </html>
