all existing files

--- a/session 11/html/learn2.html
+++ b/session 11/html/learn2.html
@@ -6,14 +6,11 @@
 	<meta name="keywords" content="Example">
 	<link rel="shortcut icon" type="text/css" href="D:\19PHP01\session 9\image\team.png">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-	<link rel="stylesheet" type="text/css" href="../css/affect.css">
 </head>
 <body>
-	<form>
-		<input class="bcc" type="submit" name="botton" value="in bang cuu chuong">
-		document.getElementById('bbc').innerHTML="In bang cuu chuong";
-
-	</form>
-<script type="text/javascript" src="../js/learn1.js"></script>
+		<p>2. Viết chương trình in ra bảng cửu chương từ 2 đến 9</p>
+	<input type="button" value="In bang cuu chuong" onclick="printTheMutipleTable()">
+	<div id="display"></div>
+	<script type="text/javascript" src="learn2.js"></script>
 </body>
 </html>
